--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNMGD -- HOME PAGE</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="css/">
     <link href="http://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
 </head>
 <body class="font-vcr font-">
