--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNMGD -- HOME PAGE</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/video.css">
     <link href="http://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
 </head>
 <body class="font-vcr font-">
