--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="font-vcr font-">
     <header class="absolute w-full">
-        <video id="bgVideo" autoplay="autoplay" loop="true" muted defaultmuted playsinline>
+        <video id="bgVideo" autoplay="autoplay" loop="true" muted defaultmuted playsinline class="min-h-screen  object-cover">
             <!-- Video is embedded in the WEBM format -->
             <source src="vid/video.mp4" type="video/mp4" />
           </video>
