--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/video.css">
     <link href="http://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
 </head>
-<body class="font-vcr font-">
-    <header class="absolute w-full">
-        <video id="bgVideo" autoplay="autoplay" loop="true" muted defaultmuted playsinline class="w-full object-cover">
+<body class="font-vcr min-h-screen">
+    <header class="">
+        <video id="bgVideo" autoplay="autoplay" loop="true" muted defaultmuted playsinline>
             <!-- Video is embedded in the WEBM format -->
             <source src="vid/video.mp4" type="video/mp4" />
           </video>
@@ -96,10 +96,10 @@
 
         <div class="flex gap-3 justify-center">
             <div class="block w-16 h-16 ">
-                <img src="imgs/apple.png" alt="Title">
+               DNMGD
             </div>
             <div class="block w-16 h-16 overflow-hidden">
-                <img src="imgs/aphex.png" alt="Title">
+                BBS
             </div>
         </div>
     </footer>
