--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <nav class=" py-2 sticky top-0 z-30">
         <div class=" max-w-6xl mx-auto relative">
             <div class="flex justify-center ">
-                <div class=" bg-amber-300 px-5 py-2 md:px-10 md:py-5 shadow-xl rounded-xl ">
-                    <a class="text-2xl md:text-4xl tracking-widest strike" href="index.html">DNMGD </a>
+                <div class=" bg-white bg-opacity-10 backdrop-blur-lg drop-shadow-lg px-5 py-2 md:px-10 md:py-5 shadow-xl rounded-xl ">
+                    <a class="text-2xl text-white md:text-4xl tracking-widest strike" href="index.html">DNMGD </a>
                 </div>
 
             </div>
