--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div class=" max-w-6xl mx-auto relative">
             <div class="flex justify-center ">
                 <div class=" bg-white bg-opacity-10 backdrop-blur-lg drop-shadow-lg px-5 py-2 md:px-10 md:py-5 shadow-xl rounded-xl ">
-                    <a class="text-2xl text-white md:text-4xl tracking-widest strike" href="index.html">DNMGD </a>
+                    <a class="strike text-2xl text-white md:text-4xl tracking-widest strike" href="index.html">DNMGD </a>
                 </div>
 
             </div>
