--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>DNMGD -- HOME PAGE</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/video.css">
-    <link href="http://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
 </head>
 <body class="font-vcr min-h-screen">
     <header class="">
