--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
               <img src="imgs/001.webp" alt="EDITORIAL 1" />
             </a>
             <div class="pswp-caption-content">
-              <b>Vivamus elementum (2016)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
+              <b>Diesel Resort (2023)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
             </div>
           </div>
 
@@ -75,7 +75,7 @@
               <img src="imgs/002.webp" alt="EDITORIAL 1" />
             </a>
             <div class="pswp-caption-content">
-              <b>Vivamus elementum (2016)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
+              <b>Diesel Resort (2023)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
             </div>
           </div>
 
@@ -101,7 +101,7 @@
               <img src="imgs/004.webp" alt="EDITORIAL 1" />
             </a>
             <div class="pswp-caption-content">
-              <b>Vivamus elementum (2016)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
+              <b>Diesel Resort (2023)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
             </div>
           </div>
 
@@ -114,7 +114,7 @@
               <img src="imgs/005.webp" alt="EDITORIAL 1" />
             </a>
             <div class="pswp-caption-content">
-              <b>Vivamus elementum (2016)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
+              <b>Diesel Resort (2023)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
             </div>
           </div>
 
@@ -127,7 +127,7 @@
               <img src="imgs/006.webp" alt="EDITORIAL 1" />
             </a>
             <div class="pswp-caption-content">
-              <b>Vivamus elementum (2016)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
+              <b>Diesel Resort (2023)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero<br>32 x 37 x 1.8 inches
             </div>
           </div>
 
@@ -182,7 +182,7 @@
       paddingFn: (viewportSize) => {
         return viewportSize.x < 700 ? smallScreenPadding : largeScreenPadding
       },
-      pswpModule: () => import('https://unpkg.com/photoswipe@beta/dist/photoswipe.esm.js')
+      pswpModule: () => import('../node_modules/photoswipe/dist/photoswipe.esm.js')
     });
 
     const captionPlugin = new PhotoSwipeDynamicCaption(lightbox, {
