using photoswipe with cdn

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/video.css">
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css">
-    <link rel="stylesheet" href="../node_modules/photoswipe/dist/photoswipe.css">
+    <link rel="stylesheet" href="https://unpkg.com/photoswipe@5.2.0-beta.2/dist/photoswipe.css">
     <link rel="stylesheet" href="../node_modules/photoswipe-dynamic-caption-plugin/photoswipe-dynamic-caption-plugin.css">
 </head>
 <body class="font-vcr min-h-screen">
