--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
       paddingFn: (viewportSize) => {
         return viewportSize.x < 700 ? smallScreenPadding : largeScreenPadding
       },
-      pswpModule: () => import('../node_modules/photoswipe/dist/photoswipe.esm.js')
+      pswpModule: () => import('https://unpkg.com/photoswipe@beta/dist/photoswipe.esm.js')
     });
 
     const captionPlugin = new PhotoSwipeDynamicCaption(lightbox, {
