--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
     <title>DNMGD -- HOME PAGE</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/video.css">
-    <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css">
-    <link rel="stylesheet" href="https://unpkg.com/photoswipe@5.2.0-beta.2/dist/photoswipe.css">
+    <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">  
     <link rel="stylesheet" href="../node_modules/photoswipe-dynamic-caption-plugin/photoswipe-dynamic-caption-plugin.css">
+    <link rel="stylesheet" href="../node_modules/photoswipe/dist/photoswipe.css">
 </head>
 <body class="font-vcr min-h-screen">
     <header class="">
@@ -166,7 +165,7 @@
 
 
 <script type="module">
-    import PhotoSwipeLightbox from 'https://unpkg.com/photoswipe@beta/dist/photoswipe-lightbox.esm.js';
+    import PhotoSwipeLightbox from '../node_modules/photoswipe/dist/photoswipe-lightbox.esm.js';
     import PhotoSwipeDynamicCaption from '../node_modules/photoswipe-dynamic-caption-plugin/photoswipe-dynamic-caption-plugin.esm.js';
 
     const smallScreenPadding = {
