--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/video.css">
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">  
-    <link rel="stylesheet" href="../node_modules/photoswipe-dynamic-caption-plugin/photoswipe-dynamic-caption-plugin.css">
-    <link rel="stylesheet" href="../node_modules/photoswipe/dist/photoswipe.css">
+    <link rel="stylesheet" href="css/photoswipe-dynamic-caption-plugin.css">
+    <link rel="stylesheet" href="css/photoswipe.css">
 </head>
 <body class="font-vcr min-h-screen">
     <header class="">
@@ -165,8 +165,8 @@
 
 
 <script type="module">
-    import PhotoSwipeLightbox from '../node_modules/photoswipe/dist/photoswipe-lightbox.esm.js';
-    import PhotoSwipeDynamicCaption from '../node_modules/photoswipe-dynamic-caption-plugin/photoswipe-dynamic-caption-plugin.esm.js';
+    import PhotoSwipeLightbox from './js/photoswipe-lightbox.esm.js';
+    import PhotoSwipeDynamicCaption from './js/photoswipe-dynamic-caption-plugin.esm.js';
 
     const smallScreenPadding = {
       top: 0, bottom: 0, left: 0, right: 0
