--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">  
     <link rel="stylesheet" href="css/photoswipe-dynamic-caption-plugin.css">
     <link rel="stylesheet" href="css/photoswipe.css">
+    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
 </head>
 <body class="font-vcr min-h-screen">
     
