--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">  
     <link rel="stylesheet" href="css/photoswipe-dynamic-caption-plugin.css">
     <link rel="stylesheet" href="css/photoswipe.css">
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon/favicon.jpeg" type="image/x-icon">
 </head>
 <body class="font-vcr min-h-screen">
     
     <header class="">
         <video id="bgVideo" autoplay loop muted defaultmuted playsinline>
             <!-- Video is embedded in the WEBM format -->
-            <source src="vid/bg-vid.mp4" type="video/mp4" />
+            <source src="vid/video.mp4" type="video/mp4" />
           </video>
     </header>
 
@@ -25,9 +25,9 @@
 <div class="">
     <nav class=" py-2 sticky top-0 z-30">
         <div class=" max-w-6xl mx-auto relative">
-            <div class="flex justify-center ">
+            <div class="flex justify-center">
                 <div class=" bg-white bg-opacity-10 backdrop-blur-lg drop-shadow-lg px-5 py-2 md:px-10 md:py-5 shadow-xl ">
-                    <a class="strike text-2xl text-white md:text-4xl tracking-widest strike" href="index.html">DNMGD </a>
+                    <a class="strike text-5xl text-center text-black md:text-4xl tracking-widest strike" href="index.html">DNMGD </a>
                 </div>
 
             </div>
@@ -52,8 +52,8 @@
     <!--VIDEO DOCU ENDS HERE-->
     
 <!--PHOTO GRIDS -->
-<div class="flex ">
-    <div class="grid grids-cols-1 gap-2 lg:grid-cols-3 lg:gap-3  px-4 py-4 pswp-gallery" id="gallery">
+<div class="flex contain ">
+    <div class="grid grids-cols-1 gap-2 lg:grid-cols-3 lg:gap-3 scroll  px-4 py-4 pswp-gallery" id="gallery">
         <div class="pswp-gallery__item">
             <a  
               href="./imgs/001.webp" 
@@ -143,7 +143,7 @@
 
 <!--FOOTER STARTS-->
 
-    <footer class=" mt-10 text-white">
+    <footer class=" mt-10 text-white text-center">
         <div class="container justify-center grid gap-1 max-w-screen-xl mx-auto px-1 uppercase">
             <a href="">general info</a>
             <a href="">contact</a>
@@ -152,8 +152,8 @@
             <a href="">archive</a>
         </div>
 
-        <div class="flex gap-3 justify-center">
-            <div class="block w-16 h-16 ">
+        <div class="flex gap-3 justify-center text-center">
+            <div class="block w-16 h-16 text-center">
                DNMGD
             </div>
             <div class="block w-16 h-16 overflow-hidden">
