--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <header class="">
         <video id="bgVideo" autoplay loop muted defaultmuted playsinline>
             <!-- Video is embedded in the WEBM format -->
-            <source src="vid/video.mp4" type="video/mp4" />
+            <source src="vid/bg-vid.mp4" type="video/mp4" />
           </video>
     </header>
 
